
AM_CXXFLAGS = -Wall -g3 -gdwarf -g2 -std=c++0x
AM_CPPFLAGS = -Wall -g3 -gdwarf -g2 -std=c++0x

bin_PROGRAMS = plonk
plonk_SOURCES = GLSLShader.cpp MainGL.cpp World.cpp Camera.cpp sphere.cpp drawing.cpp gldrawable.cpp spheredrawable.cpp cubedrawable.cpp cube.cpp floordrawable.cpp floor.cpp crosshairdrawable.cpp crosshairs.cpp



 

LDADD = ../lib/soil/lib/libSOIL.a 



