
AM_CXXFLAGS = -Wall -g3 -gdwarf -g2 -std=c++14
AM_CPPFLAGS = -Wall -g3 -gdwarf -g2 -std=c++14

bin_PROGRAMS = plonk

plonk_SOURCES = GLSLShader.cpp MainGL.cpp World.cpp Camera.cpp sphere.cpp drawing.cpp gldrawable.cpp spheredrawable.cpp cubedrawable.cpp cube.cpp floordrawable.cpp floor.cpp crosshairdrawable.cpp crosshairs.cpp bones.cpp bone.cpp herobodypart.cpp hero.cpp herodrawable.cpp soilfactory.cpp

#plonk_DEPENDENCIES = ../lib/soil/src/libSOIL.a
plonk_LDADD = ../lib/soil/src/libSOIL.a
 





